Fix margin on iphone top image

--- a/assets/stylesheets/_iphone.scss
+++ b/assets/stylesheets/_iphone.scss
@@ -133,7 +133,7 @@
     }
 
     .alf-container.top-image {
-        margin: 0 0 20px;
+        margin: 0;
         padding: 0;
         overflow: hidden;
     }
